--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 certifi==2019.6.16
 chardet==3.0.4
+click==8.1.7
 Django==2.2.18
 django-cors-headers==3.1.0
 djangorestframework==3.11.2
+gunicorn==21.2.0
+h11==0.14.0
 idna==2.8
+packaging==23.2
 pytz==2019.2
 requests==2.22.0
 sqlparse==0.3.0
